--- a/src/InputSelect/InputSelect.module.scss
+++ b/src/InputSelect/InputSelect.module.scss
@@ -83,7 +83,8 @@ $confirm-actions-height: 100px;
   font-size: 0.875rem !important;
   font-weight: 500 !important;
   text-align: left;
-
+  z-index: 1;
+  
   &.formField {
     color: $secondary-normal-300 !important;
     font-size: 0.75rem;
